--- a/css/style.css
+++ b/css/style.css
@@ -216,15 +216,24 @@ h1 {
 } */
 
 .loghetti {
+  width: 100%;
+  list-style: none;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
+.loghetti .flex-item {
+ flex-basis: calc(100% / 6);
+ border: 1px solid red;
+ display: flex;
+ padding: 30px;
+}
+
 .loghetti img {
-  max-width: 12%;
-  /* flex-wrap: wrap;
-  align-items: center; */
+  max-width: 100%;
+  height: auto;
+  margin: auto;
 }
 
 /* fine footer */
